--- a/Views/Shared/_VerticalLayout1.cshtml
+++ b/Views/Shared/_VerticalLayout1.cshtml
@@ -214,7 +214,13 @@
                                 <li class="nav-item">
                                     <a href="~/MailIn_Out/Records" class="sub-nav__link nav-link ">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p style="color:#ffffff;font-weight:bold; ">Records</p>
+                                        <p style="color:#ffffff;font-weight:bold; ">Out Mail Records</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="~/MailIn_Out/InRecords" class="sub-nav__link nav-link ">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p style="color:#ffffff;font-weight:bold; ">In Mail Records</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
